--- a/ikasaneip/pom.xml
+++ b/ikasaneip/pom.xml
@@ -413,7 +413,7 @@
         <version.javax.servlet>3.1.0</version.javax.servlet>
         <version.javax.servlet.jstl>1.2</version.javax.servlet.jstl>
         <version.se.jiderhamn.classloader-leak-prevention>1.10.0</version.se.jiderhamn.classloader-leak-prevention>
-        <version.activemq>5.13.4</version.activemq>
+        <version.activemq>5.15.18</version.activemq>
         <version.geronimo.spec>1.4-rc3</version.geronimo.spec>
         <version.geronimo.jms.spec>1.1.1</version.geronimo.jms.spec>
         <version.org.jboss.narayana.jta>5.5.28.Final</version.org.jboss.narayana.jta>
@@ -739,7 +739,7 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>activamq-regex-property</id>
+                        <id>activeamq-regex-property</id>
                         <goals>
                             <goal>regex-property</goal>
                         </goals>
